# DMI_Forge

./: .gitignore  .gitmodules  Aesprite_Fixer.c  CMakeLists.txt  Code_Sample  DMI2Sheet.c  DMIParse.c  DMI_Defs.h  DMI_Struct.c  Icon_State.c  Makefile  Object_C.c  PixelManip.c  PixelManip.h  README.md  ai_practice.c  conandata.yml  data_structure.c  data_structure.h  dmi.h  iconstate.h  list.c  list.h  main.c  partition_test.c  png_transform.c  storage.txt  tmx.cpp  tmx.h  vector.cpp  vector.h
Test_Cases/: CMakeLists.txt  DMI_Verification_Test.c  DMI_Verify.c  Image_Converter.c  Template.cpp  json_test.c
cJSON/: CHANGELOG.md  README.md
cJSON/fuzzing/inputs/: test11  test3  test3.bu  test3.uf  test3.uu  test6
cJSON/tests/inputs/: test11  test11.expected  test3  test3.expected  test6
cJSON/tests/unity/: README.md
cJSON/tests/unity/auto/: generate_test_runner.rb  parse_output.rb
cJSON/tests/unity/docs/: ThrowTheSwitchCodingStandard.md  UnityAssertionsReference.md  UnityConfigurationGuide.md
png/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.status  example.c  genfiles.vcxproj  genfiles.vcxproj.filters  genprebuilt.vcxproj  genprebuilt.vcxproj.filters  gensym.vcxproj  gensym.vcxproj.filters  genvers.vcxproj  genvers.vcxproj.filters  libpng.sln  png-fix-itxt.vcxproj  png-fix-itxt.vcxproj.filters  png.h  png.vcxproj  png.vcxproj.filters  png_static.vcxproj  pngfix.vcxproj  pngfix.vcxproj.filters  pngimage.vcxproj  pngimage.vcxproj.filters  pngstest.vcxproj  pngstest.vcxproj.filters  pngtest.vcxproj  pngtest.vcxproj.filters  pngunknown.vcxproj  pngunknown.vcxproj.filters  (+5 more)
png/scripts/: genchk.cmake  genout.cmake  gensrc.cmake
png/tests/: pngstest-1.8-alpha.cmake  pngstest-1.8-none.cmake  pngstest-linear-alpha.cmake  pngstest-linear-none.cmake  pngunknown-IDAT.cmake  pngunknown-sTER.cmake  pngunknown-save.cmake  pngunknown-vpAg.cmake
png/zlib/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  RUN_TESTS.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  example.vcxproj  example.vcxproj.filters  libtool  minigzip.vcxproj  minigzip.vcxproj.filters  zlib.sln  zlib.vcxproj.filters  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
png/zlib/win32/: Makefile.gcc
src/: PixelManip.c  data_structure.c  main.c  partition_test.c  tmx.cpp  vector.cpp
src/DMI/: DMIParse.c  Icon_State.c  dmi.h  iconstate.h
src/GUI/: CMakeLists.txt  IconLabel.cpp  IconLabel.h  main.cpp
src/__include/png/: pngread.c  pngrutil.c
src/__include/png/installation/lib/cmake/PNG/: PNGTargets-noconfig.cmake  PNGTargets.cmake
src/__include/png/installation/lib/libpng/: libpng16-noconfig.cmake
src/__include/png/installation/lib/pkgconfig/: libpng16.pc
src/data_structures/: data_structure.c  data_structure.h
src/dmi/: DMI2Sheet.c  DMIParse.c  DMI_Struct.c  Icon_State.c  dmi.h  iconstate.h
src/gui/: CMakeLists.txt  Docker.cpp  Docker.h  IconLabel.cpp  IconLabel.h  IconText.h  ImageViewer.h  imageviewer.h  main.cpp
src/image_manipulation/: PixelManip.c  PixelManip.h  png_transform.c
zlib/: ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  config.status  zlib.vcxproj
zlib/contrib/vstudio/vc14/x64/ZlibDllDebug/Tmp/zlibvc.tlog/: zlibvc.lastbuildstate
